fix: placeholder was visible when the inputs were filled

--- a/src/styles/Form.module.css
+++ b/src/styles/Form.module.css
@@ -81,6 +81,17 @@
     top: -8px;
 }
 
+.input__field:valid + .input__label {
+    background-color: var(--white);
+    border-radius: 2px;
+    color: var(--blue);
+    font-size: var(--font-size-xxs);
+    left: 6px;
+    position: absolute;
+    padding: 1px 2px;
+    top: -8px;
+}
+
 .form__button {
     background-color: var(--blue);
     box-sizing: border-box;
